force-app/main/default/objects/Related_Source__c/fields/Referred_Employee__c.field-meta.xml
<CustomField>
    <fullName>Referred_Employee__c</fullName>
    <label>Referred Employee</label>
    <length>200</length>
    <type>Text</type>
</CustomField>