force-app/main/default/objects/Related_Source__c/fields/Relationship_to_referred_Person__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_referred_Person__c</fullName>
    <label>Relationship to referred Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>