force-app/main/default/objects/Related_Source__c/fields/RM_CP_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_CP_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM/CP Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources4</relationshipName>
    <type>Lookup</type>
</CustomField>