force-app/main/default/objects/Related_Source__c/fields/RM_Event_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>RM_Event_Confirmation__c</fullName>
    <label>RM Event Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>May be</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>