force-app/main/default/objects/Related_Source__c/fields/Sales_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Sales_Feedback__c</fullName>
    <label>Sales Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>