force-app/main/default/objects/Related_Source__c/fields/Search_Closing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Search_Closing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search Closing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources6</relationshipName>
    <type>Lookup</type>
</CustomField>