force-app/main/default/objects/Related_Source__c/fields/Search_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Search_Sourcing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search Sourcing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources7</relationshipName>
    <type>Lookup</type>
</CustomField>