force-app/main/default/objects/Related_Source__c/fields/Secondary_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone1__c</fullName>
    <formula>if(ISBLANK(Secondary_Phone__c),&apos;&apos;, LEFT(Secondary_Phone__c, 4) &amp; &apos;XXXX&apos; &amp; RIGHT(Secondary_Phone__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Phone</label>
    <type>Text</type>
</CustomField>