force-app/main/default/objects/Related_Source__c/fields/Secondary_Phone_Project__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone_Project__c</fullName>
    <formula>IF(NOT(ISBLANK(Secondary_Phone__c)),Secondary_Phone__c+TEXT(Allocated_Project__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Phone Project</label>
    <type>Text</type>
</CustomField>