force-app/main/default/objects/Related_Source__c/fields/Secondary_source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_source__c</fullName>
    <label>Secondary source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate Portals</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Employe Referral</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Google Demandgen</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook CTW</fullName>
            </value>
            <value>
                <fullName>Taboola</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>FacebookLG</fullName>
            </value>
            <value>
                <fullName>Google Adwords</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Portal Listing</fullName>
            </value>
            <value>
                <fullName>RWA Activity</fullName>
            </value>
            <value>
                <fullName>SMS Campaign</fullName>
            </value>
            <value>
                <fullName>Doctor HNI</fullName>
            </value>
            <value>
                <fullName>GCC Calling</fullName>
            </value>
            <value>
                <fullName>HNI Database</fullName>
            </value>
            <value>
                <fullName>Singapore-HNI Data</fullName>
            </value>
            <value>
                <fullName>Somerset HNI</fullName>
            </value>
            <value>
                <fullName>Booking Engine</fullName>
            </value>
            <value>
                <fullName>Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Cxi Call</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>EDM Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>