force-app/main/default/objects/Related_Source__c/fields/SecondaryEmailProject__c.field-meta.xml
<CustomField>
    <fullName>SecondaryEmailProject__c</fullName>
    <formula>IF(NOT(ISBLANK(Secondary_Email__c)),Secondary_Email__c+TEXT(SLead__r.Allocated_Project__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SecondaryEmailProject</label>
    <type>Text</type>
</CustomField>