force-app/main/default/objects/Related_Source__c/fields/SecondaryPhoneProject__c.field-meta.xml
<CustomField>
    <fullName>SecondaryPhoneProject__c</fullName>
    <formula>IF(NOT(ISBLANK(Secondary_Phone__c)),Secondary_Phone__c+TEXT(SLead__r.Allocated_Project__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SecondaryPhoneProject</label>
    <type>Text</type>
</CustomField>