force-app/main/default/objects/Related_Source__c/fields/Select_Your_Preferred_Plot_Size__c.field-meta.xml
<CustomField>
    <fullName>Select_Your_Preferred_Plot_Size__c</fullName>
    <label>Select Your Preferred Plot Size</label>
    <length>200</length>
    <type>Text</type>
</CustomField>