force-app/main/default/objects/Related_Source__c/fields/sfleadcaphfprod_External_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>sfleadcaphfprod_External_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Lead ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>