force-app/main/default/objects/Related_Source__c/fields/Share_Project_Deta__c.field-meta.xml
<CustomField>
    <fullName>Share_Project_Deta__c</fullName>
    <label>Share Project Deta</label>
    <length>200</length>
    <type>Text</type>
</CustomField>