force-app/main/default/objects/Related_Source__c/fields/Site_Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Completed__c</fullName>
    <formula>if(No_of_Site_Visit__c &gt; 0 , &apos;YES&apos;, &apos;NO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Completed</label>
    <type>Text</type>
</CustomField>