force-app/main/default/objects/Related_Source__c/fields/Source_Manager_Id_s__c.field-meta.xml
<CustomField>
    <fullName>Source_Manager_Id_s__c</fullName>
    <label>Source Manager Id&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>