force-app/main/default/objects/Related_Source__c/fields/Source_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funding__c</fullName>
    <label>Source of Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own Funds</fullName>
            </value>
            <value>
                <fullName>Home Loans</fullName>
            </value>
            <value>
                <fullName>Sale of Existing Property</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>