force-app/main/default/objects/Related_Source__c/fields/Spouse_Designation__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Designation__c</fullName>
    <label>Spouse Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>