force-app/main/default/objects/Related_Source__c/fields/Spouse_Working__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Working__c</fullName>
    <label>Spouse Working</label>
    <length>255</length>
    <type>Text</type>
</CustomField>