force-app/main/default/objects/Related_Source__c/fields/STM2__c.field-meta.xml
<CustomField>
    <fullName>STM2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STM2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources8</relationshipName>
    <type>Lookup</type>
</CustomField>