force-app/main/default/objects/Related_Source__c/fields/Sv_Designation__c.field-meta.xml
<CustomField>
    <fullName>Sv_Designation__c</fullName>
    <label>Sv_Designation</label>
    <type>TextArea</type>
</CustomField>