force-app/main/default/objects/Related_Source__c/fields/Sv_Designation_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sv_Designation_of_Customer__c</fullName>
    <label>Sv_Designation of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Level</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>VP/SVP/EVP</fullName>
            </value>
            <value>
                <fullName>Senior Director</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Junior Executive/Associate</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>