force-app/main/default/objects/Related_Source__c/fields/SV_Drive_Team__c.field-meta.xml
<CustomField>
    <fullName>SV_Drive_Team__c</fullName>
    <label>SV Drive Team</label>
    <length>200</length>
    <type>Text</type>
</CustomField>