force-app/main/default/objects/Related_Source__c/fields/SV_Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>SV_Entry_Time__c</fullName>
    <label>SV Entry Time</label>
    <type>DateTime</type>
</CustomField>