force-app/main/default/objects/Related_Source__c/fields/SV_pipeline__c.field-meta.xml
<CustomField>
    <fullName>SV_pipeline__c</fullName>
    <label>SV pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit Proposed</fullName>
            </value>
            <value>
                <fullName>Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>