force-app/main/default/objects/Related_Source__c/fields/SV_User__c.field-meta.xml
<CustomField>
    <fullName>SV_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SV User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources9</relationshipName>
    <type>Lookup</type>
</CustomField>