force-app/main/default/objects/Related_Source__c/fields/TAT_for_New_Lead__c.field-meta.xml
<CustomField>
    <fullName>TAT_for_New_Lead__c</fullName>
    <label>TAT for New Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>