force-app/main/default/objects/Related_Source__c/fields/TAT_For_Sales__c.field-meta.xml
<CustomField>
    <fullName>TAT_For_Sales__c</fullName>
    <label>TAT For Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>