force-app/main/default/objects/Related_Source__c/fields/Team_Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Rating__c</fullName>
    <label>Team Lead Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>