force-app/main/default/objects/Related_Source__c/fields/TL_RHS_Count__c.field-meta.xml
<CustomField>
    <fullName>TL_RHS_Count__c</fullName>
    <label>TL/RHS Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>