force-app/main/default/objects/Related_Source__c/fields/Transfered_On__c.field-meta.xml
<CustomField>
    <fullName>Transfered_On__c</fullName>
    <label>Transfered On</label>
    <type>DateTime</type>
</CustomField>