force-app/main/default/objects/Related_Source__c/fields/Unit_Preference__c.field-meta.xml
<CustomField>
    <fullName>Unit_Preference__c</fullName>
    <label>Unit Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>4.5 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>