force-app/main/default/objects/Related_Source__c/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Casual Enquiry</fullName>
            </value>
            <value>
                <fullName>Handover Timeline</fullName>
            </value>
            <value>
                <fullName>Dropped/ Postponed</fullName>
            </value>
            <value>
                <fullName>Unable to connect</fullName>
            </value>
            <value>
                <fullName>Dimension</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>Already Allocated</fullName>
            </value>
            <value>
                <fullName>Booked With Competitor</fullName>
            </value>
            <value>
                <fullName>Interested In New Project</fullName>
            </value>
            <value>
                <fullName>Interested in Plots/Villas/Commercial</fullName>
            </value>
            <value>
                <fullName>No Discount</fullName>
            </value>
            <value>
                <fullName>Non Contactable</fullName>
            </value>
            <value>
                <fullName>Not A Valid Customer</fullName>
            </value>
            <value>
                <fullName>Not In Availability</fullName>
            </value>
            <value>
                <fullName>Not In Cost</fullName>
            </value>
            <value>
                <fullName>Not In Location</fullName>
            </value>
            <value>
                <fullName>Not In Size</fullName>
            </value>
            <value>
                <fullName>Postponed the Plan</fullName>
            </value>
            <value>
                <fullName>Vastu/Sunlight/Technical/Nala Issue</fullName>
            </value>
            <value>
                <fullName>Looking For RTM</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Wrong Number/Invalid Number</fullName>
            </value>
            <value>
                <fullName>Not Enquired</fullName>
            </value>
            <value>
                <fullName>Delivery Timeline too long</fullName>
            </value>
            <value>
                <fullName>Frequently disconnecting</fullName>
            </value>
            <value>
                <fullName>Client has Blocked</fullName>
            </value>
            <value>
                <fullName>Reading message but not responding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>