force-app/main/default/objects/Related_Source__c/fields/UTM_Adgroup__c.field-meta.xml
<CustomField>
    <fullName>UTM_Adgroup__c</fullName>
    <label>UTM_Adgroup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>