force-app/main/default/objects/Related_Source__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM_Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>