force-app/main/default/objects/Related_Source__c/fields/UTM_Device__c.field-meta.xml
<CustomField>
    <fullName>UTM_Device__c</fullName>
    <label>UTM_Device</label>
    <length>100</length>
    <type>Text</type>
</CustomField>