force-app/main/default/objects/Related_Source__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM_Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>