force-app/main/default/objects/Related_Source__c/fields/UTM_Placement__c.field-meta.xml
<CustomField>
    <fullName>UTM_Placement__c</fullName>
    <label>UTM_Placement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>