force-app/main/default/objects/Related_Source__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM_Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>