force-app/main/default/objects/Related_Source__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>