force-app/main/default/objects/Related_Source__c/fields/Verified_Number__c.field-meta.xml
<CustomField>
    <fullName>Verified_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Number</label>
    <type>Checkbox</type>
</CustomField>