force-app/main/default/objects/Related_Source__c/fields/Verified_Phone__c.field-meta.xml
<CustomField>
    <fullName>Verified_Phone__c</fullName>
    <label>Verified Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>