force-app/main/default/objects/Related_Source__c/fields/Walking_Lead_Form__c.field-meta.xml
<CustomField>
    <fullName>Walking_Lead_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Walking Lead Form</label>
    <type>Checkbox</type>
</CustomField>