force-app/main/default/objects/Related_Source__c/fields/Welcome_Code_Used__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Code_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Code Used</label>
    <type>Checkbox</type>
</CustomField>