force-app/main/default/objects/Related_Source__c/fields/WhatsApp_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Message_Id__c</fullName>
    <label>WhatsApp Message Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>