force-app/main/default/objects/Related_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Lead_status1__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>Source_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Channel_Partner1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Type__c</field>
        <operation>equals</operation>
        <value>Fresh</value>
    </filters>
    <label>All</label>
</ListView>